--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -16,3 +16,7 @@ version = "0.9"
 version = "1"
 [dependencies.log]
 version = "0.4"
+[dependencies.solana-sdk]
+version = "1.17"
+[dependencies.solana-client]
+version = "1.17"
