--- a/perpetuals/Cargo.toml
+++ b/perpetuals/Cargo.toml
@@ -6,6 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.anchor-gen]
-version = "0.3.0"
+git = "https://github.com/bonedaddy/anchor-gen"
+rev = "6aa968e295cecbadc2a12954e514df05e6d768a7"
 [dependencies.anchor-lang]
 version = "0.29"
+[dependencies.solana-sdk]
+version = "1.17"
+[dependencies.solana-client]
+version = "1.17"
+[dependencies.anyhow]
+version = "1"
