--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -26,3 +26,7 @@ version = "0.29"
 version = "1.17"
 [dependencies.log]
 version = "0.4"
+[dependencies.spl-token]
+version = "3"
+[dependencies.solana-client]
+version = "1.17"
