--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,7 @@ resolver = "2"
 opt-level = 3
 incremental = false
 codegen-units = 1
-# lto = "fat"
+lto = "fat"
+[profile.release.build-override]
+opt-level = 3
+codegen-units = 1
