--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -21,7 +21,7 @@ path = "../perpetuals"
 [dependencies.borsh]
 version = "1"
 [dependencies.anchor-lang]
-version = "0.29"
+version = "0.26"
 [dependencies.solana-sdk]
 version = "1.17"
 [dependencies.log]
@@ -33,3 +33,9 @@ version = "1.17"
 [dependencies.mimalloc]
 version = "*"
 default-features = false
+[dependencies.jupiter-cpi]
+git = "https://github.com/bonedaddy/jupiter-cpi.git"
+rev = "8115ff25ad1a76f46ae8045abbad5f5b99671f76"
+features = ["cpi"]
+[dependencies.jupiter_api]
+path = "../jupiter_api"
