--- a/perpetuals/Cargo.toml
+++ b/perpetuals/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies.anchor-gen]
 git = "https://github.com/bonedaddy/anchor-gen"
 rev = "6aa968e295cecbadc2a12954e514df05e6d768a7"
+#git = "https://github.com/jup-ag/anchor-gen.git"
+#rev = "dae4c216b883ea089432ff5c00d100f4f662fd07"
 [dependencies.anchor-lang]
-version = "0.29"
+version = "0.26"
 [dependencies.solana-sdk]
 version = "1.17"
 [dependencies.solana-client]
